--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "daisyui": "^2.51.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.7",
     "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
